--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.ruivieira</groupId>
     <artifactId>java-plotlib</artifactId>
-    <version>0.0.10</version>
+    <version>0.0.11</version>
 
     <build>
         <plugins>
@@ -43,6 +43,10 @@
         </plugins>
     </build>
 
+    <properties>
+        <commons.math.version>3.6.1</commons.math.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>commons-io</groupId>
@@ -53,6 +57,11 @@
             <groupId>org.tinylog</groupId>
             <artifactId>tinylog</artifactId>
             <version>1.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons.math.version}</version>
         </dependency>
     </dependencies>
 
