--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.ruivieira</groupId>
     <artifactId>java-plotlib</artifactId>
-    <version>0.0.11</version>
+    <version>0.0.12</version>
 
     <build>
         <plugins>
@@ -91,11 +91,19 @@
         </profile>
     </profiles>
 
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>bintray-ruivieira-maven</id>-->
+<!--            <name>ruivieira-maven</name>-->
+<!--            <url>https://api.bintray.com/maven/ruivieira/maven/java-plotlib/;publish=1</url>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
+
     <distributionManagement>
         <repository>
-            <id>bintray-ruivieira-maven</id>
-            <name>ruivieira-maven</name>
-            <url>https://api.bintray.com/maven/ruivieira/maven/java-plotlib/;publish=1</url>
+            <id>github</id>
+            <name>GitHub ruivieira Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/ruivieira/java-plotlib</url>
         </repository>
     </distributionManagement>
 
